# strategy-pattern-rs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/impls/: mod.rs  strategy_pattern_fn.rs  strategy_pattern_type.rs
src/util/: macro_utils.rs  mod.rs
